- Fixed facebook connection issues
- Fixed copying units generating error when file exists in subfolder
- Added tinymce simple editor in free text questions
- Updated exporting content to SCORM to include files previously left out
- Fixed glossary terms displaying inside content in chrome/safari
-

=== Version 3.6.8 build 9931 ===
- Added chat module
- Fixed logging out users from lessons when the session id is used in the past by the same user
- Fixed my courses link not clickable in Opera
- Fixed remote themes not being deleted
- Fixed lesson statistics traffic tab ignoring time constraint
- Fixed paging for group users
- Fixed adding users to default group does not assign group courses/lessons
- Fixed deleting a user logging out administrator
- Fixed issue with non-english names in mp3 files inserted to editor via arrow
- Fixed invalid XML in api's lesson/course listings
- Fixed issue about exporting themes layout with custom blocks
- Fixed training record link in branch statistics
- Updated js inclusion to allow chat module to work with IE8
- Updated completion conditions that are related to tests to not display score
- Deleted frame from editor when toggling pdf content in editing unit (#1034)
- Moved creating views to installation script
- Users-to-groups csv import functionality updated for performance
- Added virtual keyboard in editor and an option to disable it

=== Version 3.6.8 build 9777 ===
- XML API security update
- Automatic logout and session handling updates
- Added "Fuze meetings" module (commercial editions)
- Added strip tags in site motto displaying in title
- Prototip tooltip is now created only when asked for
- Removed edit link from SCORM 2004 child unit
- Removed calendar from course tools and announcement form when disabled
- Small performance improvement in test reports
- Visiting a unit link after logging out correctly registers the lesson after logging in